[package]
name = "toy-rsa"
version = "0.1.0"
authors = ["Ronnie Song <ronniesong0809@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toy_rsa_lib = { git = "http://github.com/pdx-cs-rust/toy-rsa-lib" }
more-asserts = "0.2.1"